fixed alignment of header

--- a/src/app/school/school.component.css
+++ b/src/app/school/school.component.css
@@ -163,9 +163,7 @@ tr td.active {
   font-weight: normal;
   color:  #b4adad;
   font-size: 16px;
-  margin-left: 100px;
   max-width: 543px;
-  padding: 15px 0;
 }
 
 .page-nav li.section-link {
